--- a/cslibrary/build.gradle
+++ b/cslibrary/build.gradle
@@ -3,6 +3,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
+
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 android {
     compileSdkVersion 29
     defaultConfig {
@@ -17,8 +22,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     buildToolsVersion '28.0.3'
 }
+
+
+
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
