--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,10 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // android-maven
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        // jcenter
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'//还有这一行
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
