--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation project(':cslibrary')
+//    implementation project(':cslibrary')
+    implementation 'com.github.XueMoMo:cslibrary:1.1.5'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.palette:palette-ktx:1.0.0'
 }
